--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
               confident in becoming more proficient with each project.
             </p>
             <span class="d-flex mt-3">
-              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/resume.pdf">
+              <a rel="noreferrer" target="_blank" class="cta-btn cta-btn--resume" href="assets/CV.pdf">
                 View Resume
               </a>
             </span>
